@@ -46,11 +46,10 @@ import java.time.Duration;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Supplier;
+import java.util.function.LongSupplier;
 import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.ml.job.JobNodeSelector.AWAITING_LAZY_ASSIGNMENT;
@@ -70,11 +69,12 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
     private static final long DEFAULT_NODE_SIZE = ByteSizeValue.ofGb(20).getBytes();
     private static final long DEFAULT_JVM_SIZE = ByteSizeValue.ofMb((long)(DEFAULT_NODE_SIZE * 0.25)).getBytes();
     private static final long DEFAULT_JOB_SIZE = ByteSizeValue.ofMb(200).getBytes();
+    private static final long DEFAULT_MODEL_SIZE = ByteSizeValue.ofMb(200).getBytes();
     private static final long OVERHEAD = ByteSizeValue.ofMb(30).getBytes();
     private NodeLoadDetector nodeLoadDetector;
     private ClusterService clusterService;
     private Settings settings;
-    private Supplier<Long> timeSupplier;
+    private LongSupplier timeSupplier;
     private MlMemoryTracker mlMemoryTracker;
 
     @Before
@@ -84,9 +84,10 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
         when(mlMemoryTracker.asyncRefresh()).thenReturn(true);
         when(mlMemoryTracker.getAnomalyDetectorJobMemoryRequirement(any())).thenReturn(DEFAULT_JOB_SIZE);
         when(mlMemoryTracker.getDataFrameAnalyticsJobMemoryRequirement(any())).thenReturn(DEFAULT_JOB_SIZE);
+        when(mlMemoryTracker.getTrainedModelAllocationMemoryRequirement(any())).thenReturn(DEFAULT_JOB_SIZE);
         nodeLoadDetector = mock(NodeLoadDetector.class);
         when(nodeLoadDetector.getMlMemoryTracker()).thenReturn(mlMemoryTracker);
-        when(nodeLoadDetector.detectNodeLoad(any(), anyBoolean(), any(), anyInt(), anyInt(), anyBoolean()))
+        when(nodeLoadDetector.detectNodeLoad(any(), any(), anyInt(), anyInt(), anyBoolean()))
             .thenReturn(NodeLoad.builder("any")
                 .setUseMemory(true)
                 .incAssignedJobMemory(ByteSizeValue.ofGb(1).getBytes())
@@ -121,6 +122,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             Collections.emptyList(),
             Collections.emptyList(),
             Collections.emptyList(),
+            Collections.emptyList(),
             null,
             NativeMemoryCapacity.ZERO,
             MlScalingReason.builder()),
@@ -148,6 +150,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -171,6 +174,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -194,6 +198,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -237,6 +242,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 nodesWithRoom,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -250,6 +256,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 nodesWithRoom,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -260,6 +267,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 nodesWithRoom,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -284,6 +292,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -297,6 +306,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -310,6 +320,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -336,6 +347,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder);
@@ -348,6 +360,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 new NativeMemoryCapacity(ByteSizeValue.ofGb(3).getBytes(), ByteSizeValue.ofGb(1).getBytes()),
                 new NativeMemoryCapacity(ByteSizeValue.ofGb(2).getBytes(), ByteSizeValue.ofGb(2).getBytes()),
                 reasonBuilder);
@@ -358,6 +371,7 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 fullyLoadedNode,
                 jobTasks,
                 analytics,
+                Collections.emptyList(),
                 new NativeMemoryCapacity(ByteSizeValue.ofMb(1).getBytes(), ByteSizeValue.ofMb(1).getBytes()),
                 new NativeMemoryCapacity(ByteSizeValue.ofGb(2).getBytes(), ByteSizeValue.ofGb(2).getBytes()),
                 reasonBuilder);
@@ -365,6 +379,90 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(ByteSizeValue.ofGb(8).getBytes()));
             assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(ByteSizeValue.ofMb(8992).getBytes()));
         }
+    }
+
+    public void testScaleUp_withWaitingModelAndAutoMemoryAndNoRoomInNodes() {
+        when(mlMemoryTracker.getTrainedModelAllocationMemoryRequirement(any())).thenReturn(ByteSizeValue.ofGb(2).getBytes());
+        List<NodeLoad> fullyLoadedNode = Arrays.asList(
+            NodeLoad.builder("any")
+                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                .setUseMemory(true)
+                .incAssignedJobMemory(ByteSizeValue.ofGb(1).getBytes())
+                .build()
+        );
+        MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
+            .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
+        MlAutoscalingDeciderService service = buildService();
+        service.setUseAuto(true);
+        Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
+            0,
+            0,
+            fullyLoadedNode,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            List.of("foo"),
+            null,
+            NativeMemoryCapacity.ZERO,
+            reasonBuilder
+        );
+        assertFalse(decision.isEmpty());
+        AutoscalingDeciderResult result = decision.get();
+        long allowedBytesForMlNode = NativeMemoryCalculator.allowedBytesForMl(
+            result.requiredCapacity().node().memory().getBytes(),
+            30,
+            true
+        );
+        long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
+            result.requiredCapacity().total().memory().getBytes(),
+            30,
+            true
+        );
+        assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(ByteSizeValue.ofGb(2).getBytes() + OVERHEAD));
+        assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(ByteSizeValue.ofGb(2).getBytes() + OVERHEAD));
+    }
+
+    public void testScaleUp_withWaitingModelsAndRoomInNodes() {
+        MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
+            .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
+        List<NodeLoad> nodesWithRoom = Arrays.asList(
+            NodeLoad.builder("partially_filled")
+                .setMaxMemory(ByteSizeValue.ofMb(430).getBytes())
+                .setUseMemory(true)
+                .setMaxJobs(10)
+                .incNumAssignedJobs()
+                .incAssignedJobMemory(ByteSizeValue.ofMb(230).getBytes())
+                .build(),
+            NodeLoad.builder("not_filled").setMaxMemory(ByteSizeValue.ofMb(230).getBytes()).setMaxJobs(10).setUseMemory(true).build()
+        );
+        MlAutoscalingDeciderService service = buildService();
+        service.setMaxMachineMemoryPercent(25);
+        Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
+            0,
+            0,
+            nodesWithRoom,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            List.of("foo", "bar", "baz"),
+            null,
+            NativeMemoryCapacity.ZERO,
+            reasonBuilder
+        );
+        assertTrue(decision.isPresent());
+        assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo((DEFAULT_JOB_SIZE + OVERHEAD) * 4));
+        assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (DEFAULT_JOB_SIZE + OVERHEAD)));
+        assertFalse(
+            service.checkForScaleUp(
+                1,
+                0,
+                nodesWithRoom,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                List.of("foo", "bar"),
+                null,
+                NativeMemoryCapacity.ZERO,
+                reasonBuilder
+            ).isPresent()
+        );
     }
 
     public void testScaleDown() {
@@ -605,9 +703,8 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 MapBuilder.<String, String>newMapBuilder()
                     .put(MachineLearning.MACHINE_MEMORY_NODE_ATTR, String.valueOf(DEFAULT_NODE_SIZE))
                     .put(MachineLearning.MAX_JVM_SIZE_NODE_ATTR, String.valueOf(DEFAULT_JVM_SIZE))
-                    .put(MachineLearning.MAX_OPEN_JOBS_NODE_ATTR, String.valueOf(10))
                     .map(),
-                new HashSet<>(Arrays.asList(DiscoveryNodeRole.MASTER_ROLE)),
+                Set.of(DiscoveryNodeRole.ML_ROLE),
                 Version.CURRENT))
             .collect(Collectors.toList());
     }
